:heavy_plus_sign: Add node-fetch dependency
:truck: Replace NPM with Yarn

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
 		"notion"
 	],
 	"author": "Sergei Orlov <hello@orlow.dev> (https://orlow.dev/)",
-	"license": "MIT"
+	"license": "0BSD",
+	"dependencies": {
+		"node-fetch": "^2.6.1"
+	}
 }
