--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "0.0.0",
 	"description": "Gatsby source plugin for official Notion.so API",
 	"main": "index.js",
+	"publishConfig": {
+		"registry": "https://registry-url"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "echo \"No build script setup\""
