--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 	},
 	"readme": "https://github.com/orlowdev/gatsby-source-notion-api#readme",
 	"dependencies": {
-		"node-fetch": "^2.6.1"
+		"node-fetch": "^2.6.1",
+		"or-pipets": "^1.0.1"
 	},
 	"devDependencies": {
 		"ava": "^3.15.0",
