--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 	"readme": "https://github.com/orlowdev/gatsby-source-notion-api#readme",
 	"dependencies": {
 		"node-fetch": "^2.6.1",
-		"or-pipets": "^1.0.1"
+		"or-pipets": "^1.0.1",
+		"yaml": "^1.10.2"
 	},
 	"devDependencies": {
 		"ava": "^3.15.0",
