:sparkles: Add support for image transformation in props
:sparkles: Add support for lowering title level
:sparkles: Add option for transforming Notion page props to frontmatter
:heavy_plus_sign: Add gatsby-source-filesystem as a peer dependency
:bug: Fix indentation of code snippets written in Markdown syntax
:bug: Fix displaying Markdown tables

--- a/package.json
+++ b/package.json
@@ -87,5 +87,8 @@
 		"statements": 80,
 		"check-coverage": true,
 		"all": true
+	},
+	"peerDependencies": {
+		"gatsby-source-filesystem": "^3.6.0"
 	}
 }
